Update manifest.json Wild Card

--- a/manifest.json
+++ b/manifest.json
@@ -342,7 +342,7 @@
     },
 	  {
       "js": [ "./sources/vl.js" ],
-      "matches": [ "https://vaughn.live/" ]
+      "matches": [ "https://vaughn.live/*" ]
     },
 	{
       "js": [ "./sources/twitcasting.js" ],
